<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voicechat_exit_room"
                style="@style/voicechat_text_style_16"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/tv_dialog_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voicechat_exit_room_tip_for_compere"
                style="@style/voicechat_text_style_14"
                android:textColor="#B2B7C4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/voicechat_iv_border"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_tips"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <LinearLayout
                android:id="@+id/llay_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voicechat_exit_room_confirm"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    style="@style/voicechat_text_style_16"
                    />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/voicechat_iv_border"
                    />


                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voicechat_exit_room_cancel"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textColor="#00BCD4"
                    style="@style/voicechat_text_style_16"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>