<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.aliyun.auikits.voicechat.vm.ChatMusicViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/voicechat_background"
            tools:background="@android:color/black"
            >

            <FrameLayout
                android:id="@+id/llay_dialog_header"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/tv_dialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/voicechat_text_style_14"
                    android:text="@string/voicechat_music"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    />

                <View
                    android:id="@+id/chat_member_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/voicechat_divider"
                    android:layout_gravity="bottom"
                    />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llay_human_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llay_dialog_header"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/voicechat_text_style_12"
                    android:text="@string/voicechat_human_volume"
                    />

                <SeekBar
                    android:id="@+id/sk_human_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="32dp"
                    android:progress="@{viewModel.humanVolume}"
                    android:max="100"
                    android:onProgressChanged="@{viewModel.onHumanVolumeChanged}"
                    android:thumbTint="@color/voicechat_white_default"
                    android:progressTint="@color/voicechat_white_default"
                    />
                <TextView
                    android:id="@+id/tv_human_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="18dp"
                    style="@style/voicechat_text_style_12"
                    android:text="@{String.valueOf(viewModel.humanVolume)}"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llay_music_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llay_human_volume"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/voicechat_text_style_12"
                    android:text="@string/voicechat_music_volume"
                    />

                <SeekBar
                    android:id="@+id/sk_music_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="32dp"
                    android:progress="@{viewModel.musicVolume}"
                    android:max="100"
                    android:onProgressChanged="@{viewModel.onMusicVolumeChanged}"
                    android:thumbTint="@color/voicechat_white_default"
                    android:progressTint="@color/voicechat_white_default"
                    />
                <TextView
                    android:id="@+id/tv_music_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="18dp"
                    style="@style/voicechat_text_style_12"
                    android:text="@{String.valueOf(viewModel.musicVolume)}"
                    />

            </LinearLayout>

            <View
                android:id="@+id/chat_divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/voicechat_divider"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llay_music_volume"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chat_data_list"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chat_divider1"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>